--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -310,6 +310,7 @@
 
     .demographics p {
         padding: 0.25rem;
+        font-size: 1rem;
     }
 
     .local-photos img:hover {
